# ros2_def

./: .aderc  .gitignore  LICENSES.yaml  Makefile  README.md  conf.py  index.rst  package.xml  setup.cfg  setup.py
ros2/orchestrator/: CMakeLists.txt  package.xml  pyrightconfig.json
ros2/orchestrator/config/: unittest_detector_node_config.json  unittest_fqn_launch_config.json  unittest_remapping_launch_config.json  unittest_remapping_node_config.json  unittest_tracking_example_launch_config.json
ros2/orchestrator/configs/: ego_motion_node_config.json  objects2file_node_config.json  sil_launch_config.json  sil_no_ul1800_launch_config.json  sil_node_config.json  sil_reconfig_launch_config.json  sil_rosbag_launch_config.json  tracking_mec_node_config.json  tracking_ul1800_node_config.json  trajectory_planning_node_config.json
ros2/orchestrator/docs/: conf.py  index.rst
ros2/orchestrator/docs/developer/: index.rst
ros2/orchestrator/docs/usage/: adapting_data_source.rst  adapting_nodes.rst  index.rst  launch.rst
ros2/orchestrator/orchestrator/: lib.py
ros2/orchestrator/orchestrator/orchestrator_lib/: action.py  model_loader.py  name_utils.py  node_model.py  node_model_from_file.py  orchestrator.py  remapping_generation.py
ros2/orchestrator/orchestrator/util/: __init__.py  node_wrapper.py
ros2/orchestrator/schemas/: launch_config_schema.json  node_config_schema.json
ros2/orchestrator/test/: test_launchconfig_load.py  test_node_model_from_config.py  test_remapping.py
ros2/orchestrator/typings/ament_index_python/: packages.pyi
ros2/orchestrator/typings/deepdiff/: __init__.pyi  diff.pyi
ros2/orchestrator/typings/message_filters/: __init__.pyi
ros2/orchestrator/typings/rclpy/: serialization.pyi
ros2/orchestrator/typings/rosbag2_py-stubs/: setup.py
ros2/orchestrator/typings/rosidl_runtime_py/: utilities.pyi
ros2/orchestrator_dummy_nodes/: CMakeLists.txt  package.xml  setup.py
ros2/orchestrator_dummy_nodes/configs/: configurable_forwarding_node_config.json  double_timer_node_config.json  double_timer_test_launch_config.json  plausibility_node_config.json  reconfiguration_test_after_launch_config.json  reconfiguration_test_before_launch_config.json  reconfigurator_node_config.json  service_test_launch_config.json  sil_reconfigurator_node_config.json  time_sync_test_launch_config.json  tracking_example_launch_config.json  tracking_node_config.json  verification_1_drop_launch_config.json  verification_2_parallel_inputs_launch_config.json  verification_3_same_output_launch_config.json  verification_4_service_launch_config.json  verification_t_subscriber_node_config.json
ros2/orchestrator_dummy_nodes/launch/: double_timer_orchestrated_launch.py  forwarding_baseline_launch.py  reconfiguration_test_launch.py  service_test_orchestrated_launch.py  testbed_launch.py  time_sync_rosbag_test_launch.py  time_sync_test_launch.py  tracking_example_bag_launch.py  tracking_example_intercepted_launch.py  tracking_example_launch.py  tracking_sensors_launch.py  verification_1_drop_launch.py  verification_1_drop_orchestrator_launch.py  verification_2_parallel_inputs_launch.py  verification_2_parallel_inputs_orchestrator_launch.py  verification_3_same_output_launch.py  verification_3_same_output_orchestrator_launch.py  verification_4_service_launch.py  verification_4_service_orchestrator_launch.py
ros2/orchestrator_dummy_nodes/orchestrator_dummy_nodes/: camera_input_node.py  configurable_forwarding_node.py  detector.py  double_timer_publisher.py  graph_analysis.py  interceptor.py  metrics_calculator.py  orchestrator_node.py  plausibility_node.py  reconfigurator.py  rosbag_prune.py  service_caller_node.py  service_provider_node.py  sil_reconfigurator_node.py  simple_timer_publisher.py  timed_sensor_publisher.py  tracking_example_configuration.py  tracking_mock.py  tracking_subscriber.py  verification_t_subscriber.py
ros2/orchestrator_helper/: .gitignore  CMakeLists.txt  Doxyfile  package.xml
ros2/orchestrator_helper/include/orchestrator_helper/: orchestrated_publisher.hpp  orchestrator_helper.hpp
ros2/orchestrator_interfaces/: CMakeLists.txt  package.xml
ros2/orchestrator_interfaces/msg/: Status.msg
ros2/orchestrator_interfaces/srv/: ReconfigurationRequest.srv  SetConfigurationService.srv
ros2/orchestrator_rosbag_player/: CMakeLists.txt  package.xml  setup.py
ros2/orchestrator_rosbag_player/orchestrator_rosbag_player/: rosbag_player.py
src/orchestrator_dummy_nodes/: CMakeLists.txt  package.xml  setup.py
src/orchestrator_dummy_nodes/configs/: camera_input_node_config.json  planning_node_config.json  service_caller_node_config.json  service_provider_node_config.json  time_sync_test_launch_config.json  tracking_example_launch_config.json
src/orchestrator_dummy_nodes/launch/: forwarding_baseline_launch.py  forwarding_latency_launch.py  service_test_launch.py  service_test_orchestrated_launch.py  testbed_intercepted_launch.py  testbed_launch.py  time_sync_rosbag_test_launch.py  tracking_example_intercepted_launch.py  tracking_example_launch.py
src/orchestrator_dummy_nodes/orchestrator_dummy_nodes/: cam_test_configuration.py  camera_input_node.py  detector.py  events.py  example_launch_config.json  forwarding_node.py  graph_analysis.py  latency.py  launch_config_schema.json  node_model.py  nxtest.py  orchestrator.py  orchestrator_node.py  parallel_undeterministic_publisher.py  perception_tracking_example.py  plausibility_node.py  remapping_generation.py  serializing_interceptor.py  service_caller_node.py  service_provider_node.py  simple_timer_publisher.py  test.py  timed_sensor_publisher.py  topic_remapping.py  tracking_example_configuration.py  tracking_example_launch_config.json  tracking_example_launchutil.py  tracking_example_orchestrator.py  tracking_subscriber.py
src/orchestrator_dummy_nodes/orchestrator_dummy_nodes/orchestrator_lib/: action.py  (+3 more)
src/orchestrator_dummy_nodes/test/: test_remapping.py
src/orchestrator_interfaces/: CMakeLists.txt
src/orchestrator_interfaces/msg/: SampleMessage.msg
src/orchestrator_interfaces/srv/: SampleService.srv
(+138 files in other folders)
