<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>orchestrator_dummy_nodes</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="gja38@todo.todo">gja38</maintainer>
    <license>TODO: License declaration</license>

    <depend>orchestrator</depend>
    <depend>aduulm_cmake_tools</depend>
    <depend>orchestrator_interfaces</depend>
    <depend>orchestrator_rosbag_planner</depend>
    <depend>aduulm_messages</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
